[gd_scene load_steps=18 format=2]

[ext_resource path="res://Assets/Fonts/Minecraft.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Dwarf Sprite Sheet 1.3v-export.png" type="Texture" id=2]
[ext_resource path="res://Screens/WinScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 70
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 480, 192, 96 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 480, 192, 96 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 480, 192, 96 )

[sub_resource type="AtlasTexture" id=6]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 480, 192, 96 )

[sub_resource type="AtlasTexture" id=7]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 480, 192, 96 )

[sub_resource type="AtlasTexture" id=8]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 672, 192, 96 )

[sub_resource type="AtlasTexture" id=9]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 672, 192, 96 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 672, 192, 96 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 768, 672, 192, 96 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 960, 672, 192, 96 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 1152, 672, 192, 96 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": true,
"name": "win",
"speed": 5.0
}, {
"frames": [ SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 4.0
} ]

[node name="WinScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
level = "res://World.tscn"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 200.0
rect_min_size = Vector2( 0, 200 )

[node name="Label" type="Label" parent="VBoxContainer/CenterContainer"]
margin_left = 239.0
margin_top = 64.0
margin_right = 785.0
margin_bottom = 135.0
custom_fonts/font = SubResource( 1 )
text = "Congratulations!"

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 204.0
margin_right = 1024.0
margin_bottom = 654.0
rect_min_size = Vector2( 0, 450 )
mouse_filter = 2
alignment = 1

[node name="PlayAgain" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 1024.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 100 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/PlayAgain"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -513.0
margin_top = -20.0
margin_right = 513.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Play Again[/center]
"
tab_size = 6
text = "Play Again
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton3" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 175.0
margin_right = 1024.0
margin_bottom = 275.0
rect_min_size = Vector2( 0, 100 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/TextureButton3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -513.0
margin_top = -20.0
margin_right = 513.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Go back to menu[/center]
"
tab_size = 6
text = "Go back to menu
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="VBoxContainer/VBoxContainer"]
margin_top = 279.0
margin_right = 1024.0
margin_bottom = 379.0
rect_min_size = Vector2( 0, 100 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/VBoxContainer/TextureButton2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -513.0
margin_top = -20.0
margin_right = 513.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 100 )
mouse_filter = 2
custom_fonts/normal_font = SubResource( 2 )
bbcode_enabled = true
bbcode_text = "[center]Quit[/center]
"
tab_size = 6
text = "Quit
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="VBoxContainer2"]
position = Vector2( 505.108, 161.346 )
frames = SubResource( 14 )
animation = "win"
frame = 1
playing = true
[connection signal="pressed" from="VBoxContainer/VBoxContainer/PlayAgain" to="." method="_on_PlayAgain_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton3" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/TextureButton2" to="." method="_on_TextureButton2_pressed"]
